[package]
name = "rocket"
version = "0.2.0"
edition = "2024"
description = "RunixOS package builder using Linux namespaces"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
nix = { version = "0.30", features = ["sched", "mount", "hostname", "signal", "fs", "process", "user"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
